# aws-mcp

./: README.md  agent.py  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.aws-sam/: build.toml
lambda/: Dockerfile  main.py  requirements.txt  server.py
